# cookiecutter-pypackage

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE_HEADER.txt  README.md  mkdocs.yml  pyproject.toml  renovate.json
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  code-quality.yml  release.yml
{{cookiecutter.project_slug}}/docs/: README.md  gen_ref_pages.py  index.md
{{cookiecutter.project_slug}}/docs/about/: license.md
{{cookiecutter.project_slug}}/docs/development/: changelog.md  code-of-conduct.md  contributing.md
{{cookiecutter.project_slug}}/docs/getting-started/: installation.md  quickstart.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  exceptions.py  py.typed  types.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_exceptions.py  test_version.py
